scss/blocks/tokens.scss
/* ... */
.content-block--token-container .stack .stack-item .value {
  text-align: right;
  font-size: 13px;
  align-self: center;

  .token-value {
    display: block;
  }
}

.content-block--token-container .stack .stack-item .preview.inverted-text {
  color: var(--colorWhite);

  .token-value {
    color: var(--colorWhite);
  }
}

.content-block--token-container .stack .stack-item:first-child,
.content-block--token-container .stack .stack-item:first-child .preview {
  border-top-left-radius: var(--borderRadiusLarge);
  border-top-right-radius: var(--borderRadiusLarge);
}

.content-block--token-container .stack .stack-item .previews-side-by-side .preview:first-child {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.content-block--token-container .stack .stack-item .previews-side-by-side .preview:last-child {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  width: 35%;
}

.content-block--token-container .stack .stack-item:last-child,
.content-block--token-container .stack .stack-item:last-child .preview {
  border-bottom-left-radius: var(--borderRadiusLarge);
  border-bottom-right-radius: var(--borderRadiusLarge);
}

.content-block--token-container .stack .stack-item .previews-side-by-side {
  display: flex;
  width: 100%;
  gap: 1px;
}

/* fallback support for non-color tokens in Color stack type */

.content-block--token-container .stack .stack-item.fallback {
  .name {
    display: flex;
    gap: 16px;
    align-items: center;
    width: 100%;
  }
  
  .preview {
    padding-left: 0;
  }
}

.content-block--token-container .stack .stack-item.fallback {
  align-items: center;
  border-bottom: 1px solid var(--colorBorderSubtle);
}

.content-block--token-container .stack .stack-item.fallback:last-child {
  border-bottom: 0;
}

@media (max-width: 576px) {
  .content-block--token-container .grid > div,
  .content-block--token-container .grid > a {
    flex: 0 1 49%;
    margin: 0 0 8px 0;
  }

  .content-block--token-container .grid > div {
    flex: 0 1 49%;
    margin: 0 0 8px 0;
  }
}

@media (max-width: 768px) {
  .content-block--token-group-container.variant-stack-2 {
    grid-template-columns: repeat(1, 1fr);
  }
  .content-block--token-container table tr {
    height: 100%;
  }
  .content-block--token-container table tr td:nth-child(2) {
    width: auto;
    padding: initial;
    margin: -40px 0 0 50px;
    text-align: left;
  }
  .content-block--token-container table tr td:nth-child(3) {
    padding: initial;
    text-align: left;
    margin: 4px 0 0 50px;
  }
  .content-block--token-container table tr td:nth-child(4) {
    width: auto;
    padding: initial;
    text-align: left;
    margin: 4px 0 8px 50px;
  }
}


/** Contrast grid **/
.token-block-variant--contrast-grid {
  display: flex;
  flex-direction: column;
  font-size: var(--fontSizeSmall);
  font-weight: var(--fontWeightSemibold);

  .contrast-grid {
    display: flex;
    flex-direction: column;

    .contrast-grid--header {
      display: flex;
      position: sticky;
      top: calc(6px + var(--topNavHeight) + var(--tabOffset, 0));
      padding-top: 6px;
      background: var(--colorBackgroundPrimary);
    }

    .grid-content--header {
      overflow: hidden;
    }
  }

  .contrast-grid--content {
    display: flex;

    .grid-content--table {
      overflow: auto;
    }
  }

  .header-column--cell,
  .corner-tile {
    padding-right: 40px;
    flex-shrink: 0;
    min-width: 220px;
    background: var(--colorBackgroundPrimary);
    padding: 6px;
    font-weight: var(--fontWeightBold);
  }

  .corner-tile {
    justify-content: space-between;
    display: flex;
    padding: 2px;
    font-weight: var(--fontWeightSemibold);

    .swatch {
      flex-direction: row;
      justify-content: space-between;
      padding: 6px;
      align-items: center;
      background-color: var(--colorBackgroundAlt);
    }
  }

  .grid--header-row,
  .grid--row {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;

    .cell {
      display: flex;
      width: 86px;
      height: 86px;  
      flex-shrink: 0;
      padding: 2px;
      transition: all 0.2s ease-in-out;

      &.highlighted {
        background: #f6d8ba !important;
      }
    }
  }

  .grid--header-row {
    overflow: hidden;
    font-weight: var(--fontWeightBold);

    .cell {
      height: auto;
    }
  }

  .inverted-text {
    color: var(--colorInkInverted);
  }

  .bordered {
    box-shadow: inset 0px 0px 0px 1px var(--colorBorderSubtle);
  }

  .swatch {  
    display: flex;
    flex-direction: column;
    width: 100%;
    border-radius: var(--borderRadiusSmall);

    .contrast {
      display: flex;
      justify-content: space-between;
      align-items: center;
      width: 100%;
      font-size: var(--fontSizeTiny);
      line-height: 1;
    }

    .color-fill {
      padding: 6px;
      justify-content: space-between;
      overflow: auto;
      height: 100%;
      display: flex;
      align-content: space-between;
      flex-direction: column;
      border-radius: var(--borderRadiusSmall);
    }

    &.swatch-empty { 
      display: flex;
      align-items: center;
      justify-content: center;
      background: var(--colorBackgroundAlt);
      color: var(--colorInkTertiary);

      svg {
        width: 12px;
        height: 12px;
      }
    }
  }
}

